@@ -14,6 +14,7 @@ version 0.5.6:
   - dummy VGA PCI support
   - VGA font selection fix (Daniel Serpell)
   - PIC reset fix (Hidemi KAWAI)
+  - PIC spurious irq support (aka Solaris install bug)
 
 version 0.5.5:
 
